# erpnext

./: .editorconfig  .eslintrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pylintrc  .releaserc  .releaserc.json  .snyk  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Dependencies  Hello  INSTALL  ISSUE_TEMPLATE  LICENSE  MANIFEST.in  README  README.md  SECURITY.md  TRADEMARK_POLICY.md  allerlei.patch  attributions.md  babel_extractors.csv  build.json  codecov.yml  commitlint.config.js  conf.js  config.json  config.py  contents.html  crowdin.yml  cypress.json  dev-requirements.txt  (+44 more)
.circleci/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  stale.yml
.kdev4/: erpnext.kdev4
.travis/: site_config.json
Satit/: test-new
accounts/: __init__.py  general_ledger.py  utils.py
asset/: asset.js  asset.json  asset.py
asset_category/: asset_category.js  asset_category.json  asset_category.py
buying/: __init__.py  utils.py
cgi-bin/: README.md  getfile.cgi
ci/: fix-mariadb.sh  my_config.h.patch
config/: _timestamps.js  conf.py
controllers/: accounts_controller.py  buying_controller.py  queries.py  selling_controller.py  status_updater.py  stock_controller.py  tax_controller.py  transaction_controller.py  trends.py
css/: all-app.css  all-web.css  style-app.css  style-web.css
current/: index.html
cypress/: tsconfig.json
docs/: docs.about.md  docs.blog.md  docs.community.md  docs.dev.api.md  docs.dev.install.debian.md  docs.dev.install.md  docs.dev.install.red_hat.md  docs.dev.md  docs.dev.translate.md  docs.download.md  docs.md  docs.user.accounts.journal_voucher.md  docs.user.accounts.md  docs.user.accounts.payments.md  docs.user.accounts.pos.md  docs.user.accounts.purchase_invoice.md  docs.user.accounts.returns.md  docs.user.accounts.sales_invoice.md  docs.user.buying.material_request.md  docs.user.buying.md  docs.user.buying.purchase_order.md  docs.user.buying.supplier.md  docs.user.buying.supplier_quotation.md  docs.user.customize.custom_field.md  docs.user.customize.custom_form.md  docs.user.customize.md  docs.user.customize.modules.md  docs.user.customize.print_format.md  docs.user.help.md  docs.user.hr.employee.md  docs.user.hr.expense_claim.md  docs.user.hr.md  docs.user.implement.concepts.md  docs.user.implement.md  docs.user.implement.strategy.md  docs.user.intro.md  docs.user.intro.open_source.md  docs.user.intro.try.md  docs.user.md  docs.user.mfg.md  (+60 more)
erpnext/: .pylintrc  .stylelintrc  __init__.py  __version__.py  auth.py  calendar_map.json  celery_config.py  config.json  config.py  custom_patch.py  custom_utils.py  custom_workflow.py  desktop.json  emails.py  erpnext_version.py  exceptions.py  get_account_tree.py  hooks.py  hooks.py.save  hooks.py.save.1  hooks.txt  import_tmc_salary_structure.py  jinja.py  main.py  manage.py  modules.txt  nepali_date.py  patches.txt  patches.txt~  permission.py  tasks.py  tools.py  vlog.py  worker.py
erpnext-ui/: App.tsx
erpnext.egg-info/: PKG-INFO  SOURCES.txt
event_updates/: __init__.py
goldfish/: celery_config.py  config.py  main.py  tasks.py
goldfish-ui/: App.tsx  package.json  tsconfig.json
home/: __init__.py
hr/: README.md  __init__.py  utils.py
js/: all-app.js  all-web.js  app.js
manufacturing/: __init__.py
material_management/: tests.py
patches/: customer_address.py  delivery_billing_status_patch.py  erpnext_structure_cleanup.py  feed_patch.py  index_patch.py  patch.py  patch_list.py
portal/: utils.py  website_transactions.py
projects/: __init__.py  utils.py
public/: app.html  build.json  login-page.html  rss.xml  server.py  sitemap.xml  unsupported.html  web.py
resources/: nginx-entrypoint.sh  nginx-template.conf
sandbox/: test_leave.py  test_stock_entry.py  test_stock_reco.py
selling/: README.md  sales_common.js  utils.py
setup/: __init__.py  utils.py
startup/: __init__.py  bean_handlers.py  boot.py  event_handlers.py  install.py  observers.py  open_count.py  query_handlers.py  report_data_map.py  schedule_handlers.py  startup.comp.js  startup.css  startup.js  startup.py  website.py  webutils.py
stock/: __init__.py  stock_ledger.py  utils.py
support/: __init__.py
templates/: index.html
test_sites/: apps.txt  languages.txt
translations/: ar.csv  de.csv  el.csv  es.csv  fr.csv  hi.csv  hr.csv  it.csv  languages.json  nl.csv  pt-BR.csv  pt.csv  si.csv  sr.csv  ta.csv  th.csv  zh-cn.csv
travis/: bench_init.sh  run-tests.sh
user/: index.html
utilities/: README.md  __init__.py  cleanup_data.py  make_demo.py  repost_stock.py  transaction_base.py  website_transactions.py
website/: README.md  blog.py  (+5 more)
(+28589 files in other folders)
